--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -1,23 +1,37 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
+<div class="main" style="background-image: url('images/default.jpg')">
+  <video id="video_background" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
+    <source src="images/video/time.webm" type="video/webm">
+    <source src="images/video/time.mp4" type="video/mp4">
+    Video not supported
+  </video>
+  <!--  Change the image source of #video_background '/images/video_bg.jpg')" with your favourite image.  -->
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
+  <div class="cover black" data-color="black"></div>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
+  <!--  You can change the black color for the filter with those colors: blue, green, red, orange -->
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+  <div class="container">
+    <h1 class="logo cursive">
+      Title
+    </h1>
+
+    <div class="content">
+      <h4 class="motto">Content of title goes here.</h4>
+      <div class="subscribe">
+        <h5 class="info-text">
+          Content of subscribe for mailing goes here.
+        </h5>
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">
+            <form class="form-inline" role="form">
+              <div class="form-group">
+                <input type="email" class="form-control transparent" placeholder="Your email here...">
+              </div>
+              <button type="submit" class="btn btn-warning btn-fill">Notify Me</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
