change font family and title

--- a/web/app/styles/background.scss
+++ b/web/app/styles/background.scss
@@ -736,7 +736,7 @@ h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
     z-index: 3;
 }
 .main .logo.cursive{
-    font-family: 'Grand Hotel',cursive;
+    font-family: 'Kalam',cursive;
     font-size: 82px;
     
 }
@@ -919,6 +919,10 @@ h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
 }
 .fixed-plugin .badge-red{
     background-color: #FF3B30;
+}
+
+.subscribe-mail {
+    width: 100% !important;
 }
 
 @media (max-width:768px){
