--- a/web/app/styles/main.scss
+++ b/web/app/styles/main.scss
@@ -6,7 +6,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 
 /* external-lib */
 @import url("http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css");
-@import url("http://fonts.googleapis.com/css?family=Grand+Hotel");
+@import url('https://fonts.googleapis.com/css?family=Kalam');
 
 
 /* local-files */
