--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -12,7 +12,7 @@
 
   <div class="container">
     <h1 class="logo cursive">
-      Title
+      Invision App
     </h1>
 
     <div class="content">
@@ -25,7 +25,7 @@
           <div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">
             <form class="form-inline" role="form">
               <div class="form-group">
-                <input type="email" class="form-control transparent" placeholder="Your email here...">
+                <input type="email" class="form-control subscribe-mail transparent" placeholder="Your email here...">
               </div>
               <button type="submit" class="btn btn-warning btn-fill">Notify Me</button>
             </form>
