reformated code, implemented login signup design

--- a/web/app/styles/common.scss
+++ b/web/app/styles/common.scss
@@ -8,3 +8,21 @@
 body {
   padding: 0;
 }
+
+.login-register {
+  input.form-control {
+    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5) !important;
+    &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+      color: grey !important;
+    }
+    &::-moz-placeholder { /* Firefox 19+ */
+      color: grey !important;
+    }
+    &:-ms-input-placeholder { /* IE 10+ */
+      color: grey !important;
+    }
+    &:-moz-placeholder { /* Firefox 18- */
+      color: grey !important;
+    }
+  }
+}
