--- a/web/app/styles/main.scss
+++ b/web/app/styles/main.scss
@@ -12,4 +12,5 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 /* local-files */
 @import "common";
 @import "background";
+@import "login-register";
 
