application form validation, general styles, password verify

--- a/web/app/styles/common.scss
+++ b/web/app/styles/common.scss
@@ -33,3 +33,24 @@ body {
 .bg-white {
   background: #fff !important;
 }
+.margin-left-5 {
+  margin-left: 5px!important;
+}
+.margin-right-5 {
+  margin-right: 5px!important;
+}
+.margin-bottom-10 {
+  margin-bottom: 10px!important;
+}
+.margin-bottom-20 {
+  margin-bottom: 20px!important;
+}
+.margin-bottom-30 {
+  margin-bottom: 30px!important;
+}
+.margin-bottom-40 {
+  margin-bottom: 40px!important;
+}
+.danger-border {
+  border: 2px solid #F44336;
+}
