uncover work...need to set

--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -12,7 +12,7 @@
 
   <div class="container">
     <h1 class="logo cursive">
-      Invision App
+      Invision App -- {{boolean}}
     </h1>
 
     <div class="content">
