refactored code, enabled root.scope level loading in app

--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -12,7 +12,7 @@
 
   <div class="container">
     <h1 class="logo cursive">
-      Invision App -- {{boolean}}
+      Invision App
     </h1>
 
     <div class="content">
