implemented login API

--- a/web/app/styles/common.scss
+++ b/web/app/styles/common.scss
@@ -54,3 +54,7 @@ body {
 .danger-border {
   border: 2px solid #F44336;
 }
+.grey-bg {
+  background: #808080!important;
+  color: #ffffff!important;;
+}
