styled chat page

--- a/web/app/styles/common.scss
+++ b/web/app/styles/common.scss
@@ -58,3 +58,9 @@ body {
   background: #808080!important;
   color: #ffffff!important;;
 }
+
+.navbar-transparent {
+  padding-top: 5px !important;
+  background-color: rgba(0,0,0,0.5) !important;
+  margin: 0;
+}
