--- a/web/app/styles/home.scss
+++ b/web/app/styles/home.scss
@@ -1,3 +1,13 @@
 .home-wrapper {
-
+  padding-top: 75px;
+  background-size: cover;
+  position: absolute;
+  background-position: center;
+  width: 100%;
+  left: 0;
+  .overlay {
+    background-color: rgba(0, 0, 0, 0.6);
+    height: 100%;
+    width: 100%;
+  }
 }
