update timeline panel style

--- a/web/app/views/home.html
+++ b/web/app/views/home.html
@@ -10,7 +10,7 @@
               <timeline-badge class="no-timeline-badge-shadow {{thing.isMe ? 'success' : 'danger'}}">
                 <i class="fa fa-stop"></i>
               </timeline-badge>
-              <timeline-panel class="{{thing.isMe ? 'primary' : 'danger'}}">
+              <timeline-panel class="timeline-panel-style">
                 <timeline-heading>
                   <h4>{{thing.title}}</h4>
                 </timeline-heading>
