--- a/web/app/styles/home.scss
+++ b/web/app/styles/home.scss
@@ -13,4 +13,10 @@
   .no-timeline-badge-shadow {
     box-shadow: none !important;
   }
+  .timeline-panel-style {
+    background: #9e9e9e1c !important;
+    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+    color: white !important;
+    border: none;
+  }
 }
