update style and remove title

--- a/web/app/styles/home.scss
+++ b/web/app/styles/home.scss
@@ -30,6 +30,7 @@
       line-height: 20px;
     }
   }
+  .timeline-panel-style:after, .timeline-panel-style:before { display: none !important; }
   .timeline {
     &:before {
       width: 2px;
