--- a/web/app/views/home.html
+++ b/web/app/views/home.html
@@ -7,7 +7,8 @@
             <timeline-event ng-repeat="thing in home.timeline track by $index" side="{{thing.isMe ? 'right' : 'left'}}"
                             when-visible="home.animateElementIn"
                             when-not-visible="home.animateElementOut">
-              <timeline-badge title="Play" class="cursor no-timeline-badge-shadow {{thing.isMe ? 'success' : 'danger'}}">
+              <timeline-badge title="Play" class="cursor no-timeline-badge-shadow {{thing.isMe ? 'success' : 'danger'}}"
+              data-ng-click="home.playText(thing.content)">
                 <i class="fa fa-stop"></i>
               </timeline-badge>
               <timeline-panel class="timeline-panel-style">
