--- a/web/app/views/home.html
+++ b/web/app/views/home.html
@@ -9,7 +9,7 @@
                             when-not-visible="home.animateElementOut">
               <timeline-badge title="Play" class="cursor no-timeline-badge-shadow {{thing.isMe ? 'success' : 'danger'}}"
               data-ng-click="home.playText(thing.content)">
-                <i class="fa fa-stop"></i>
+                <i class="fa fa-play"></i>
               </timeline-badge>
               <timeline-panel class="timeline-panel-style">
                 <timeline-heading>
