--- a/web/app/styles/home.scss
+++ b/web/app/styles/home.scss
@@ -42,4 +42,12 @@
       margin-left: -0.5px;
     }
   }
+  .timeline-badge {
+    i {
+      left: 2px;
+      position: relative;
+      font-size: 18px;
+      bottom: 1px;
+    }
+  }
 }
