added Google credentials in meta tag, implemented Google Signin, commit github and facebook login

--- a/web/app/styles/login-register.scss
+++ b/web/app/styles/login-register.scss
@@ -222,4 +222,9 @@
     border-color: #00A4E4;
     color:  #00A4E4;
   }
+  .sign-in-with-google {
+    background: none !important;
+    margin: 0 !important;
+    padding: 0 !important;
+  }
 }
