set font style and welcome message

--- a/server/views/error.html
+++ b/server/views/error.html
@@ -5,7 +5,7 @@
     <title>Error</title>
     <style>
         body{
-            font-family: sans-serif;
+            font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
         }
         p{
             margin: 0 0 10px;
