--- a/server/views/index.html
+++ b/server/views/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="stylesheet" href="/stylesheets/index.css">
 </head>
 <body>
 
 <h1><%= title %></h1>
 <p>
-    Welcome to <%= title %>
+    Welcome to <b>N</b>atural <b>L</b>anguage <b>P</b>rocessing.
 </p>
 
 </body>
