--- a/web/app/views/home.html
+++ b/web/app/views/home.html
@@ -7,8 +7,9 @@
             <timeline-event ng-repeat="thing in home.timeline track by $index" side="{{thing.isMe ? 'right' : 'left'}}"
                             when-visible="home.animateElementIn"
                             when-not-visible="home.animateElementOut">
-              <timeline-badge title="Play" class="cursor no-timeline-badge-shadow {{thing.isMe ? 'success' : 'danger'}}">
-                <i class="fa fa-play"></i>
+              <timeline-badge title="Play" data-ng-click="home.listenSpeech(thing.content)"
+                class="cursor no-timeline-badge-shadow {{thing.isMe ? 'success' : 'danger'}}">
+                <i class="fa fa-volume-up"></i>
               </timeline-badge>
               <timeline-panel class="timeline-panel-style">
                 <timeline-heading>
