--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -11,19 +11,19 @@
   <!--  You can change the black color for the filter with those colors: blue, green, red, orange -->
 
   <div class="container">
-    <h1 class="logo cursive">
+    <h1 class="logo cursive animated fadeInDown">
       Invision App
     </h1>
 
     <div class="content">
-      <h4 class="motto">Content of title goes here.</h4>
+      <h4 class="motto animated fadeInUp">Content of title goes here.</h4>
       <div class="subscribe">
-        <h5 class="info-text">
+        <h5 class="info-text animated fadeIn">
           Content of subscribe for mailing goes here.
         </h5>
         <div class="row">
           <div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">
-            <form class="form-inline" role="form">
+            <form class="form-inline hvr-shadow" role="form">
               <div class="form-group">
                 <input type="email" class="form-control subscribe-mail transparent" placeholder="Your email here...">
               </div>
