differentiate labels upon gender

--- a/web/app/styles/common.scss
+++ b/web/app/styles/common.scss
@@ -180,3 +180,10 @@ body {
 #say_speak {
   display: none;
 }
+
+.text-pink {
+  color: #e91e63 !important;
+}
+.text-green {
+  color: #3f903f !important;
+}
