--- a/web/app/views/home.html
+++ b/web/app/views/home.html
@@ -9,7 +9,7 @@
                             when-not-visible="home.animateElementOut">
               <timeline-badge title="Play" data-ng-click="home.listenSpeech(thing.content)"
                 class="cursor no-timeline-badge-shadow {{thing.isMe ? 'success' : 'danger'}}">
-                <i class="fa fa-volume-up"></i>
+                <i class="fa hvr-grow-shadow fa-volume-up"></i>
               </timeline-badge>
               <timeline-panel class="timeline-panel-style">
                 <timeline-heading>
