--- a/web/app/styles/main.scss
+++ b/web/app/styles/main.scss
@@ -10,6 +10,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300');
 
 /* local-files */
+@import "emogi";
 @import "common";
 @import "background";
 @import "login-register";
