--- a/web/app/styles/home.scss
+++ b/web/app/styles/home.scss
@@ -36,6 +36,12 @@
       font-size: 12px;
       margin: 0;
       color: #9e9e9e;
+      .emogi {
+        &:hover {
+          text-decoration: underline;
+          cursor: pointer;
+        }
+      }
     }
   }
   .timeline-panel-style:after, .timeline-panel-style:before { display: none !important; }
