change emogi heading color

--- a/web/app/views/home.html
+++ b/web/app/views/home.html
@@ -33,7 +33,7 @@
 
 <!-- emogi template -->
 <script type="text/ng-template" popover-is-open="'false'" id="emogiTemplate.html">
-  <div class="text-info">Smiley</div>
+  <div class="text-muted emogi-heading">Smiley</div>
   <div>
     <i class="em em-smile"></i>
     <i class="em em-laughing"></i>
@@ -212,7 +212,7 @@
     <i class="em em-busts_in_silhouette"></i>
     <i class="em em-speech_balloon"></i>
   </div>
-  <div class="text-info">Nature</div>
+  <div class="text-muted emogi-heading">Nature</div>
   <div>
     <i class="em em-sunny"></i>
     <i class="em em-umbrella"></i>
@@ -328,7 +328,7 @@
     <i class="em em-milky_way"></i>
     <i class="em em-partly_sunny"></i>
   </div>
-  <div class="text-info">Object</div>
+  <div class="text-muted emogi-heading">Object</div>
   <div>
     <i class="em em-watch"></i>
     <i class="em em-radio"></i>
@@ -504,7 +504,7 @@
     <i class="em em-hourglass_flowing_sand"></i>
     <i class="em em-alarm_clock"></i>
   </div>
-  <div class="text-info">Food</div>
+  <div class="text-muted emogi-heading">Food</div>
   <div>
     <i class="em em-apple"></i>
     <i class="em em-green_apple"></i>
@@ -566,7 +566,7 @@
     <i class="em em-lollipop"></i>
     <i class="em em-honey_pot"></i>
   </div>
-  <div class="text-info">Activity</div>
+  <div class="text-muted emogi-heading">Activity</div>
   <div>
     <i class="em em-football"></i>
     <i class="em em-basketball"></i>
@@ -599,7 +599,7 @@
     <i class="em em-ticket"></i>
     <i class="em em-slot_machine"></i>
   </div>
-  <div class="text-info">Symbol</div>
+  <div class="text-muted emogi-heading">Symbol</div>
   <div>
     <i class="em em-one"></i>
     <i class="em em-two"></i>
@@ -802,7 +802,7 @@
     <i class="em em-small_red_triangle"></i>
     <i class="em em-small_red_triangle_down"></i>
   </div>
-  <div class="text-info">Place</div>
+  <div class="text-muted emogi-heading">Place</div>
   <div>
     <i class="em em-car"></i>
     <i class="em em-taxi"></i>
