--- a/web/app/styles/common.scss
+++ b/web/app/styles/common.scss
@@ -200,5 +200,21 @@ body {
     height: 150px;
     overflow: scroll;
     padding: 7px;
+    .text-muted {
+      color: #9e9e9e;
+    }
+    .emogi-heading {
+      overflow: hidden;
+    }
+    .emogi-heading:after {
+      content:"";
+      display: inline-block;
+      height: 0.7em;
+      vertical-align: bottom;
+      width: 100%;
+      margin-right: -100%;
+      margin-left: 10px;
+      border-top: 1px solid #c9c9c9;
+    }
   }
 }
