--- a/web/app/styles/common.scss
+++ b/web/app/styles/common.scss
@@ -190,31 +190,46 @@ body {
 
 /* for emogi popover */
 .popover {
-  background: #f1f1f1;
+  background: transparent;
+  padding-left: 8px;
   .arrow {
     display: none !important;
   }
-  .popover-content {
-    background: #f1f1f1;
-    max-width: 250px;
-    height: 150px;
-    overflow: scroll;
-    padding: 7px;
-    .text-muted {
-      color: #9e9e9e;
+  .popover-inner {
+    background: transparent;
+    .popover-content {
+      background: transparent;
+      max-width: 250px;
+      height: 150px;
+      overflow: scroll;
+      padding: 7px;
+      .text-muted {
+        color: #9e9e9e;
+      }
+      .emogi-heading {
+        overflow: hidden;
+      }
+      .emogi-heading:after {
+        content: "";
+        display: inline-block;
+        height: 0.7em;
+        vertical-align: bottom;
+        width: 75%;
+        margin-right: -100%;
+        margin-left: 5px;
+        border-top: 1px solid #999999;
+      }
     }
-    .emogi-heading {
-      overflow: hidden;
-    }
-    .emogi-heading:after {
-      content:"";
-      display: inline-block;
-      height: 0.7em;
-      vertical-align: bottom;
-      width: 100%;
-      margin-right: -100%;
-      margin-left: 10px;
-      border-top: 1px solid #c9c9c9;
-    }
+  }
+  ::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 2px
+  }
+  ::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 4px
+  }
+  ::-webkit-scrollbar {
+    width: 0 !important;
   }
 }
