add speak fix button

--- a/web/app/styles/home.scss
+++ b/web/app/styles/home.scss
@@ -51,4 +51,47 @@
       margin-left: -0.5px;
     }
   }
+  .fixed-action-btn {
+    position: fixed;
+    right: 23px;
+    bottom: 23px;
+    padding-top: 15px;
+    margin-bottom: 0;
+    z-index: 997;
+    .btn-floating {
+      display: inline-block;
+      color: #fff;
+      position: relative;
+      overflow: hidden;
+      z-index: 1;
+      width: 56px;
+      height: 56px;
+      line-height: 40px;
+      padding: 0;
+      border-radius: 50%;
+      -webkit-transition: .3s;
+      transition: .3s;
+      cursor: pointer;
+      vertical-align: middle;
+      -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+      box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+      i {
+        font-size: 1.5em;
+        line-height: 55px;
+      }
+    }
+    .btn-large {
+      text-decoration: none;
+      color: #fff;
+      background-color: #2E7D32;
+      text-align: center;
+      letter-spacing: .5px;
+      -webkit-transition: .2s ease-out;
+      transition: .2s ease-out;
+      cursor: pointer;
+      &:hover{
+        background-color: transparent;
+      }
+    }
+  }
 }
