change title, update style

--- a/web/app/styles/background.scss
+++ b/web/app/styles/background.scss
@@ -736,9 +736,8 @@ h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
     z-index: 3;
 }
 .main .logo.cursive{
-    font-family: 'Kalam',cursive;
+    font-family: sans-serif;
     font-size: 82px;
-    
 }
 .main .content{
     position: relative;
