--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -12,7 +12,7 @@
 
   <div class="container">
     <h1 class="logo cursive animated fadeInDown">
-      Invision App
+      eBOT
     </h1>
 
     <div class="content">
