--- a/web/app/styles/common.scss
+++ b/web/app/styles/common.scss
@@ -242,3 +242,9 @@ body {
 .no-cursor {
   cursor: not-allowed;
 }
+
+.title-btn-link {
+  height: 35px;
+  margin: 17px 0;
+  line-height: 8px !important;
+}
