--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -1,22 +1,16 @@
-<div class="main" style="background-image: url('images/default.jpg')">
-  <video id="video_background" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
-    <source src="images/video/time.webm" type="video/webm">
-    <source src="images/video/time.mp4" type="video/mp4">
-    Video not supported
-  </video>
-  <!--  Change the image source of #video_background '/images/video_bg.jpg')" with your favourite image.  -->
+<div class="main">
 
   <div class="cover black" data-color="black"></div>
 
   <!--  You can change the black color for the filter with those colors: blue, green, red, orange -->
 
   <div class="container">
-    <h1 class="logo cursive animated fadeInDown">
-      eBOT
+    <h1 class="logo cursive animated fadeIn">
+      <img src="../images/logo.svg" height="250" alt="">
+      e BOT
     </h1>
 
     <div class="content">
-      <h4 class="motto animated fadeInUp">Content of title goes here.</h4>
       <div class="subscribe">
         <h5 class="info-text animated fadeIn">
           Content of subscribe for mailing goes here.
