set whole application font family

--- a/web/app/styles/home.scss
+++ b/web/app/styles/home.scss
@@ -28,7 +28,7 @@
       margin: 15px 0 10px;
     }
     p {
-      font-family: 'Open Sans', sans-serif;
+      font-family: 'Oxygen', sans-serif !important;
       word-wrap: break-word;
       line-height: 20px;
     }
