--- a/web/app/views/home.html
+++ b/web/app/views/home.html
@@ -32,6 +32,16 @@
         </div>
     </div>
 
+    <!-- fixed input -->
+    <div class="container">
+        <div class="row">
+            <div class="fixed-input col-md-12">
+                <div class="text-overlay">
+                    <textarea class="form-control" placeholder="What's in your mind.."></textarea>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- fixed button for speak -->
     <div class="fixed-action-btn">
         <a id="menu" class="animated zoomIn btn btn-floating btn-large">
