--- a/web/app/views/home.html
+++ b/web/app/views/home.html
@@ -44,7 +44,7 @@
     </div>
     <!-- fixed button for speak -->
     <div class="fixed-action-btn">
-        <a id="menu" class="animated zoomIn bubble-pulse btn btn-floating btn-large">
+        <a class="animated zoomIn bubble-pulse btn btn-floating btn-large">
             <i class="fa fa-microphone"></i>
         </a>
     </div>
