--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -6,22 +6,25 @@
 
   <div class="container">
     <h1 class="logo cursive animated fadeIn">
-      <img src="../images/logo.svg" height="250" alt="">
+      <img class="animated pulse infinite" src="../images/logo.svg" height="250" alt="">
       e BOT
     </h1>
 
     <div class="content">
       <div class="subscribe">
         <h5 class="info-text animated fadeIn">
-          Content of subscribe for mailing goes here.
+          It’s not just what you say, it’s where you say it
         </h5>
         <div class="row">
           <div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">
             <form class="form-inline hvr-shadow" role="form">
               <div class="form-group">
-                <input type="email" class="form-control subscribe-mail transparent" placeholder="Your email here...">
+                <input type="text" class="form-control subscribe-mail transparent"
+                       placeholder="What name you want to call me..">
               </div>
-              <button type="submit" class="btn btn-warning btn-fill">Notify Me</button>
+              <button type="submit" class="btn btn-warning hvr-shutter-in-horizontal btn-fill">
+                <i class="fa fa-circle-o-notch"></i>
+              </button>
             </form>
           </div>
         </div>
