--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -12,8 +12,13 @@
 
     <div class="content">
       <div class="subscribe">
-        <h5 class="info-text animated fadeIn">
-          It’s not just what you say, it’s where you say it
+        <h5 class="info-text animated fadeIn" start-timeout="2000" type-speed="40" typed
+            type-strings="[
+              '<b>S</b>^1000',
+              '<b>A</b>^1000',
+              '<b>M</b>^1000',
+              'Meet <b>Sam</b>,^1200 your^1000 best ever Assistant'
+          ]" html-mode>
         </h5>
         <div class="row">
           <div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">
