--- a/web/app/styles/home.scss
+++ b/web/app/styles/home.scss
@@ -33,6 +33,7 @@
       line-height: 20px;
     }
     .time {
+      font-family: sans-serif !important;
       font-size: 12px;
       margin: 0;
       color: #9e9e9e;
