speech recognization work

--- a/web/app/styles/home.scss
+++ b/web/app/styles/home.scss
@@ -54,8 +54,8 @@
   }
   .fixed-input {
     position: fixed;
-    bottom: 4%;
-    right: 7%;
+    bottom: 18.6px;
+    left: 6%;
     z-index: 999;
     width: 90%;
     .text-overlay {
