finalize start page, add some margin to home page last child chats list to make it visible clear

--- a/web/app/views/main.html
+++ b/web/app/views/main.html
@@ -7,7 +7,7 @@
   <div class="container">
     <h1 class="logo cursive animated fadeIn">
       <img class="animated pulse infinite" src="../images/logo.svg" height="250" alt="">
-      e BOT
+      <span class="hvr-shadow-radial">ҽ B◔T</span>
     </h1>
 
     <div class="content">
@@ -17,22 +17,9 @@
               '<b>S</b>^1000',
               '<b>A</b>^1000',
               '<b>M</b>^1000',
-              'Meet <b>Sam</b>,^1200 your^1000 best ever Assistant'
+              'Meet <b>Sam</b>,^1200 your^1000 best ever Assistant^1000 ...'
           ]" html-mode>
         </h5>
-        <div class="row">
-          <div class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3 ">
-            <form class="form-inline hvr-shadow" role="form">
-              <div class="form-group">
-                <input type="text" class="form-control subscribe-mail transparent"
-                       placeholder="What name you want to call me..">
-              </div>
-              <button type="submit" class="btn btn-warning hvr-shutter-in-horizontal btn-fill">
-                <i class="fa fa-circle-o-notch"></i>
-              </button>
-            </form>
-          </div>
-        </div>
       </div>
     </div>
   </div>
