--- a/web/app/styles/home.scss
+++ b/web/app/styles/home.scss
@@ -51,6 +51,11 @@
       width: 2px;
       margin-left: -0.5px;
     }
+    timeline-event:last-child {
+      li {
+        margin-bottom: 7.8%;
+      }
+    }
   }
   .fixed-input {
     position: fixed;
@@ -66,106 +71,6 @@
         color: black;
         height: 52px;
         border: none;
-      }
-    }
-  }
-  .fixed-action-btn {
-    position: fixed;
-    right: 32px;
-    bottom: 23px;
-    padding-top: 15px;
-    margin-bottom: 0;
-    z-index: 997;
-    .btn-floating {
-      display: inline-block;
-      color: #fff;
-      position: relative;
-      overflow: hidden;
-      z-index: 1;
-      width: 56px;
-      height: 56px;
-      line-height: 40px;
-      padding: 0;
-      border-radius: 50%;
-      -webkit-transition: .3s;
-      transition: .3s;
-      cursor: pointer;
-      vertical-align: middle;
-      -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
-      box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
-      i {
-        font-size: 1.5em;
-        line-height: 55px;
-      }
-    }
-    .btn-large {
-      text-decoration: none;
-      color: #fff;
-      background-color: #2E7D32;
-      text-align: center;
-      letter-spacing: .5px;
-      -webkit-transition: .2s ease-out;
-      transition: .2s ease-out;
-      cursor: pointer;
-      &:hover{
-        background-color: transparent;
-      }
-    }
-
-    /* when not listening */
-    .bubble-pulse {
-      animation: bubble-pulse 1.5s infinite;
-    }
-    @-webkit-keyframes bubble-pulse {
-      0% {
-        -webkit-box-shadow: 0 0 0 0 rgba(204,169,44, 0.4);
-      }
-      70% {
-        -webkit-box-shadow: 0 0 0 10px rgba(204,169,44, 0);
-      }
-      100% {
-        -webkit-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
-      }
-    }
-    @keyframes bubble-pulse {
-      0% {
-        -moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0.4);
-        box-shadow: 0 0 0 0 rgba(204,169,44, 0.4);
-      }
-      70% {
-        -moz-box-shadow: 0 0 0 10px rgba(204,169,44, 0);
-        box-shadow: 0 0 0 10px rgba(204,169,44, 0);
-      }
-      100% {
-        -moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
-        box-shadow: 0 0 0 0 rgba(204,169,44, 0);
-      }
-    }
-
-    /* when starts listening */
-    .bubble-pulse-listening {
-      animation: bubble-pulse-listening 1.5s infinite;
-    }
-    @-webkit-keyframes bubble-pulse-listening {
-      0% {
-        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
-      }
-      90% {
-        box-shadow: 0 0 0 500px rgba(204, 169, 44, 0);
-      }
-      100% {
-        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
-      }
-    }
-    @keyframes bubble-pulse-listening {
-      0% {
-        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.4);
-      }
-      90% {
-        box-shadow: 0 0 0 500px rgba(204, 169, 44, 0);
-      }
-      100% {
-        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
       }
     }
   }
